--- a/css/style.css
+++ b/css/style.css
@@ -9181,6 +9181,7 @@ button.bg-dark:focus {
 }
 
 @media (min-width: 576px) {
+  
   .text-sm-left {
     text-align: left !important;
   }
@@ -9193,6 +9194,7 @@ button.bg-dark:focus {
 }
 
 @media (min-width: 768px) {
+  
   .text-md-left {
     text-align: left !important;
   }
@@ -9205,6 +9207,7 @@ button.bg-dark:focus {
 }
 
 @media (min-width: 992px) {
+  
   .text-lg-left {
     text-align: left !important;
   }
@@ -9581,10 +9584,10 @@ h4, h5, h6 {
   overflow: hidden;
 }
 
-.product-img img,
+/* .product-img img,
 .gallery-item img {
   transition: .5s;
-}
+} */
 
 .product-item:hover img,
 .gallery-item:hover img {
@@ -9611,6 +9614,14 @@ h4, h5, h6 {
 .gallery-item:hover a {
   opacity: 1;
 }
+
+@media only screen and (max-width: 767px) {
+  
+  .product-item a {
+      opacity: 1;
+  }
+}
+
 
 .bg-gallery {
   background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../img/gallery.jpg), no-repeat center center;
